--- a/layout/styles/framework.css
+++ b/layout/styles/framework.css
@@ -86,7 +86,7 @@ It should be used in conjunction with a second class or ID
 /* HTML 5 Overrides
 --------------------------------------------------------------------------------------------------------------- */
 address, article, aside, figcaption, figure, footer, header, main, nav, section{display:block; margin:0; padding:0;}
-main{display:block; margin:4em; padding:0;}
+main{display:block; margin:3em; margin-left: 4em; padding:0;}
 
 
 /* Grid
