--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -224,8 +224,8 @@ nav ul, nav ol{margin:0; padding:0; list-style:none;}
 --------------------------------------------------------------------------------------------------------------- */
 table, th, td{border:1px solid; border-collapse:collapse; vertical-align:top;}
 table, th{table-layout:auto;}
-table{width:100%; margin-bottom:15px;}
-th, td{padding:5px 8px;}
+table{margin: 0 auto; margin-bottom:15px;}
+th, td{padding:1px 5px;}
 td{border-width:0 1px;}
 
 
@@ -400,7 +400,7 @@ table a, #comments a{background-color:inherit;}
 	.imgl, .imgr{display:inline-block; float:none; margin:0 0 10px 0;}
 	.fl_left, .fl_right{display:block; float:none;}
 	.group .group > *:last-child, .clear .clear > *:last-child, .clear .group > *:last-child, .group .clear > *:last-child{margin-bottom:0;}/* Experimental - Needs more testing in different situations, stops double margin when stacking */
-	.one_half, .one_third, .two_third, .one_quarter, .two_quarter, .three_quarter{display:block; float:none; width:auto; margin:0 0 30px 0; padding:0;}
+	.one_half, .one_third, .two_third, .one_quarter, .two_quarter, .three_quarter{display:block; float:none; width:100%; margin:0 0 30px 0; padding:0;}
 
 	#topbar{text-align:center;}
 	#topbar > div:first-of-type > ul{margin-bottom:15px;}
